--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_search/asset_search.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_search/asset_search.html
@@ -1,15 +1,231 @@
+<!--
+/**
+ * 资产 列表页 JS 脚本
+ * @author 金杰 , maillank@qq.com
+ * @since 2021-09-20 21:49:28
+ */
+ -->
 <!DOCTYPE html>
-<html style="background-color: #FFFFFF">
+<html>
+
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-    <title>资产台账</title>
+    <title th:text="${lang.translate('资产')}">资产</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="/assets/libs/layui/css/layui.css" th:href="'/assets/libs/layui/css/layui.css?'+${cacheKey}"/>
+    <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
+    <link rel="stylesheet" href="/assets/libs/toast/css/toast.css" type="text/css" th:href="'/assets/libs/toast/css/toast.css?'+${cacheKey}">
+    <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}">
+    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
+    <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
+    <style>
+    </style>
 </head>
-<body>
-<div>
-    <iframe id="form-view" src="/business/eam/asset/asset_info_list.html" frameborder=0 width="100%"  height="800px"></iframe>
+
+<body style="overflow-y: hidden">
+
+<div class="layui-card">
+
+    <div class="layui-card-body" style="">
+
+        <div class="search-bar" style="">
+
+            <div class="search-input-rows" style="opacity: 0">
+                <!-- 搜索输入区域 -->
+                <div class="layui-form toolbar search-inputs">
+                    <!-- 主键 , id ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 资产分类 , categoryId ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 分类编码 , categoryCode ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 流程 , procId ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 办理状态 , status ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('办理状态')}" class="search-label status-label">办理状态</span><span class="search-colon">:</span></div>
+                        <div id="status" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}" style="width:140px"></div>
+                    </div>
+                    <!-- 批次编码 , batchCode ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 是否显示 , display ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 是否报废 , scrap ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 物品档案 , goodsId ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 标准型号物品图片 , pictureId ,typeName=upload, isHideInSearch=true -->
+                    <!-- 计量单位 , unit ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 使用期限 , serviceLife ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 管理人员 , managerId ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 详细位置 , positionDetail ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 仓库 , warehouseId ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 资产数量 , assetNumber ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 剩余数量 , remainNumber ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 资产RFID , rfid ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 附件 , attach ,typeName=upload, isHideInSearch=true -->
+                    <!-- 维保商 , maintainerId ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 维保厂商 , maintainerName ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 联系人 , contacts ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 联系方式 , contactInformation ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 负责人 , director ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 维保开始时间 , maintenanceStartDate ,typeName=date_input, isHideInSearch=true -->
+                    <!-- 维保到期时间 , maintenanceEndDate ,typeName=date_input, isHideInSearch=true -->
+                    <!-- 维保备注 , maintenanceNotes ,typeName=text_area, isHideInSearch=true -->
+                    <!-- 财务分类 , financialCategoryId ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 财务编号 , financialCode ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 供应商 , supplierId ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 税额 , taxamountRate ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 含税金额 , taxamountPrice ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 资产原值(单价) , originalUnitPrice ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 累计折旧 , accumulatedDepreciation ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 残值率 , residualsRate ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 资产净值 , navPrice ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 采购单价 , purchaseUnitPrice ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 入账时间 , entryTime ,typeName=date_input, isHideInSearch=true -->
+                    <!-- 财务备注 , financialNotes ,typeName=text_area, isHideInSearch=true -->
+                    <!-- 设备编号 , equipmentCode ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 设备状态 , equipmentStatus ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 设备IP , equipmentIp ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 管理IP , manageIp ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 设备CPU , equipmentCpu ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 设备内存 , equipmentMemory ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 设备机柜 , rackId ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 设备机柜上位置 , rackUpNumber ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 设备机柜下位置 , rackDownNumber ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 标签 , label ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 业务编号 , businessCode ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('业务编号')}" class="search-label businessCode-label">业务编号</span><span class="search-colon">:</span></div>
+                        <input id="businessCode" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 资产状态 , assetStatus ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('资产状态')}" class="search-label assetStatus-label">资产状态</span><span class="search-colon">:</span></div>
+                        <div id="assetStatus" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}" style="width:140px"></div>
+                    </div>
+                    <!-- 来源 , sourceId ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('来源')}" class="search-label sourceId-label">来源</span><span class="search-colon">:</span></div>
+                        <div id="sourceId" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_source'}" style="width:140px"></div>
+                    </div>
+
+
+                </div>
+                <!-- 搜索输入区域 -->
+                <div class="layui-form toolbar search-inputs">
+                    <!-- 名称 , name ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('名称')}" class="search-label name-label">名称</span><span class="search-colon">:</span></div>
+                        <input id="name" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 资产编号 , assetCode ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('资产编号')}" class="search-label assetCode-label">资产编号</span><span class="search-colon">:</span></div>
+                        <input id="assetCode" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 规格型号 , model ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('规格型号')}" class="search-label model-label">规格型号</span><span class="search-colon">:</span></div>
+                        <input id="model" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 序列号 , serialNumber ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('序列号')}" class="search-label serialNumber-label">序列号</span><span class="search-colon">:</span></div>
+                        <input id="serialNumber" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+
+
+                </div>
+                <!-- 搜索输入区域 -->
+                <div class="layui-form toolbar search-inputs">
+                    <!-- 所属公司 , ownCompanyId ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('所属公司')}" class="search-label ownCompanyId-label">所属公司</span><span class="search-colon">:</span></div>
+                        <input id="ownCompanyId" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 使用公司/部门 , useOrganizationId ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('使用公司/部门')}" class="search-label useOrganizationId-label">使用公司/部门</span><span class="search-colon">:</span></div>
+                        <input id="useOrganizationId" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 使用人员 , useUserId ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('使用人员')}" class="search-label useUserId-label">使用人员</span><span class="search-colon">:</span></div>
+                        <input id="useUserId" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 位置 , positionId ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('位置')}" class="search-label positionId-label">位置</span><span class="search-colon">:</span></div>
+                        <div id="positionId" th:data="${'/service-eam/eam-position/query-paged-list'}" style="width:140px"></div>
+                    </div>
+
+
+                </div>
+                <!-- 搜索输入区域 -->
+                <div class="layui-form toolbar search-inputs">
+                    <!-- 厂商 , manufacturerId ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('厂商')}" class="search-label manufacturerId-label">厂商</span><span class="search-colon">:</span></div>
+                        <div id="manufacturerId" th:data="${'/service-eam/eam-manufacturer/query-list'}" style="width:140px"></div>
+                    </div>
+                    <!-- 资产备注 , assetNotes ,typeName=text_area, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('资产备注')}" class="search-label assetNotes-label">资产备注</span><span class="search-colon">:</span></div>
+                        <input id="assetNotes" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 采购日期 , purchaseDate ,typeName=date_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('采购日期')}" class="search-label purchaseDate-label">采购日期</span><span class="search-colon">:</span></div>
+                        <input type="text" id="purchaseDate-begin" style="width: 140px" lay-verify="date" th:placeholder="${lang.translate('开始日期')}" autocomplete="off" class="layui-input search-input search-date-input"  readonly >
+                        <span class="search-dash">-</span>
+                        <input type="text" id="purchaseDate-end"  style="width: 140px"  lay-verify="date" th:placeholder="${lang.translate('结束日期')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
+                    </div>
+
+
+                </div>
+            </div>
+
+
+            <!-- 按钮区域 -->
+            <div class="layui-form toolbar search-buttons" style="opacity: 0">
+                <button id="search-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i>&nbsp;&nbsp;<span th:text="${lang.translate('搜索')}">搜索</span></button>
+                <button id="search-button-advance" class="layui-btn layui-btn-primary icon-btn search-button-advance"><i class="layui-icon">&#xe671;</i><span th:text="${lang.translate('更多')}">更多</span></button>
+            </div>
+        </div>
+
+        <div style="margin-top: 84px ">
+            <table class="layui-table" id="data-table" lay-filter="data-table"></table>
+        </div>
+
+    </div>
 </div>
-<script src="/business/eam/asset/asset_search/asset_search.js"></script>
+
+<script type="text/javascript" src="/module/global.js" th:src="'/module/global.js?'+${cacheKey}"></script>
+<script type="text/javascript" src="/assets/libs/jquery-3.2.1.min.js" th:src="'/assets/libs/jquery-3.2.1.min.js?'+${cacheKey}"></script>
+<script type="text/javascript" src="/assets/libs/pandyle.min.js" th:src="'/assets/libs/pandyle.min.js?'+${cacheKey}"></script>
+<script type="text/javascript" src="/assets/libs/layui/layui.js" th:src="'/assets/libs/layui/layui.js?'+${cacheKey}"></script>
+<script type="text/javascript" src="/assets/libs/toast/js/toast.js" th:src="'/assets/libs/toast/js/toast.js?'+${cacheKey}"></script>
+
+<!-- 表格工具栏 -->
+<script type="text/html" id="toolbarTemplate">
+    <div class="layui-btn-container">
+    </div>
+</script>
+
+<!-- 表格操作列 -->
+<script type="text/html" id="tableOperationTemplate">
+
+    <button th:if="${perm.checkAuth('eam_asset:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
+
+</script>
+
+
+<script th:inline="javascript">
+    var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
+    var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
+    var SELECT_ASSETSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}]];
+    var AUTH_PREFIX="eam_asset";
+
+    var ATTRIBUTE_LIST_DATA =  [[${attributeListData}]];
+
+</script>
+<script th:src="'/business/eam/asset/asset_column_list.js?'+${cacheKey}"></script>
+<script th:src="'/business/eam/asset/asset_search/asset_search_ext.js?'+${cacheKey}"></script>
+<script th:src="'/business/eam/asset/asset_search/asset_search.js?'+${cacheKey}"></script>
+
 </body>
 </html>
