--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_search/employee_tree.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_search/employee_tree.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html style="background-color: #FFFFFF">
 
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-    <title th:text="${lang.translate('按组织查询资产')}">按组织查询资产</title>
+    <title th:text="${lang.translate('按人员查询')}">按人员查询</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css" th:href="'/assets/libs/layui/css/layui.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
@@ -46,28 +45,24 @@
 
 <body>
 
-
 <div class="top-container">
-
     <div class="left-tree">
         <div class="layui-form toolbar" style="padding:6px; border-bottom:1px #e6e6e6 solid; " id="toolbar">
-            <table style="width: 100%">
-                <tr>
-                    <td>
-                        <input id="search-input" class="layui-input search-input" type="text" placeholder="请输入关键字" style="width: 100%"/>
-                    </td>
-                </tr>
-            </table>
+            <table style="width: 100%"><tr>
+                <td>
+                    <input id="search-input" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入关键字')}" style="width: 100%"/>
+                </td>
+
+            </tr></table>
         </div>
         <div id="tree-container" style="overflow:auto;height:800px">
             <ul id="menu-tree" class="ztree"></ul>
         </div>
     </div>
-
-
     <div class="right-tab" style="margin-left: 8px;margin-right: 8px">
-        <div style="margin-top:6px;">
-            <iframe id="form-view" src="/business/eam/asset/asset_info_list.html" frameborder=0 width="100%"  height="800px"></iframe>
+
+        <div class="layui-tab-item layui-show" type="emp">
+            <iframe id="employee-list-ifr" src="/business/eam/asset/asset_search/employee_list.html" frameborder=0 width="100%"></iframe>
         </div>
     </div>
 </div>
@@ -80,7 +75,7 @@
 <script type="text/javascript" src="/assets/libs/layui/layui.js" th:src="'/assets/libs/layui/layui.js?'+${cacheKey}"></script>
 <script type="text/javascript" src="/assets/libs/zTree/js/jquery.ztree.all-3.5.min.js" th:src="'/assets/libs/zTree/js/jquery.ztree.all-3.5.min.js?'+${cacheKey}"></script>
 
-<script src="/business/eam/asset/asset_search/employ_list.js" th:src="'/business/eam/asset/asset_search/employ_list.js?'+${cacheKey}"></script>
+<script src="/business/eam/asset/asset_search/employee_tree.js" th:src="'/business/eam/asset/asset_search/employee_tree.js?'+${cacheKey}"></script>
 
 </body>
 </html>
