--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_selected_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_selected_list.html
@@ -59,11 +59,13 @@
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
     var SELECT_ASSETSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}]];
 
+    var ATTRIBUTE_LIST_DATA = [[${attributeListData}]] ;
     var ASSET_SELECTED_CODE =  [[${assetSelectedCode}]];
 
 
 </script>
 
+<script th:src="'/business/eam/asset/asset_column_list.js?'+${cacheKey}"></script>
 <script th:src="'/business/eam/asset/asset_selected_ext.js?'+${cacheKey}"></script>
 <script th:src="'/business/eam/asset/asset_selected_list.js?'+${cacheKey}"></script>
 
