--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_search/category_tree.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_search/category_tree.html
@@ -49,13 +49,11 @@
         </div>
     </div>
     <div class="right-tab" style="margin-left: 8px;margin-right: 8px">
-        <div style="margin-top:6px;">
-            <iframe id="form-view" src="/business/eam/asset/asset_info_list.html" frameborder=0 width="100%"  height="800px"></iframe>
+        <div class="layui-tab-item layui-show" type="emp">
+            <iframe id="asset-list-ifr" src="/business/eam/asset/asset_search/asset_search.html" frameborder=0 width="100%"  ></iframe>
         </div>
     </div>
 </div>
-
-
 
 <script th:inline="javascript">
 
