--- a/eam/common/generator/src/main/resources/templates/list.js.vm
+++ b/eam/common/generator/src/main/resources/templates/list.js.vm
@@ -457,7 +457,7 @@ function ListPage() {
 				field:"#(f.varName)",
 				inputEl:$("##(f.varName)"),
 				buttonEl:$(this),
-				single:#(f.buttonField.action.single),
+				single:false,
 				//限制浏览的范围，指定根节点 id 或 code ，优先匹配ID
 				root: "#(f.buttonField.action.rootId)",
 				targetType:"#(f.buttonField.action.targetType)",
@@ -471,7 +471,7 @@ function ListPage() {
 				field:"#(f.varName)",
 				inputEl:$("##(f.varName)"),
 				buttonEl:$(this),
-				single:#(f.buttonField.action.single),
+				single:false,
 				//限制浏览的范围，指定根节点 id 或 code ，优先匹配ID
 				root: "#(f.buttonField.action.rootId)",
 				targetType:"#(f.buttonField.action.targetType)",
