--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_column.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_column.html
@@ -75,7 +75,7 @@
     <div class="layui-form-label layui-form-label-c1"><div th:text="${item.attribute.label}"></div><div th:if="${item.required} == 1" class="layui-required">*</div></div>
 
     <div class="layui-input-block layui-input-block-c1">
-        <input lay-filter="asset_code" id="asset_code" name="asset_code" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('资产编码') }" type="text" class="layui-input"   />
+        <input lay-filter="asset_code" id="assetCode" name="asset_code" th:placeholder="${ lang.translate('系统自动生成') }" type="text" class="layui-input"   />
     </div>
 </div>
 
@@ -168,7 +168,8 @@
 <div  th:fragment="service_life" class="layui-form-item" >
     <div class="layui-form-label layui-form-label-c1"><div th:text="${item.attribute.label}"></div><div th:if="${item.required} == 1" class="layui-required">*</div></div>
     <div class="layui-input-block layui-input-block-c1">
-        <input lay-filter="serviceLife" id="serviceLife" name="serviceLife" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('使用期限') }" type="text" class="layui-input"    lay-verify="|required"   autocomplete="off" input-type="number_input" integer="false" decimal="true" allow-negative="true" step="1.0"   scale="0"/>
+        <input lay-filter="serviceLife" id="serviceLife" name="serviceLife" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('使用期限') }" type="text" class="layui-input"
+         autocomplete="off" input-type="number_input" integer="false" decimal="true" allow-negative="true" step="1.0"   scale="0"/>
     </div>
 </div>
 
@@ -455,7 +456,7 @@
 <div  th:fragment="residuals_rate" class="layui-form-item" >
     <div class="layui-form-label layui-form-label-c1"><div th:text="${item.attribute.label}"></div><div th:if="${item.required} == 1" class="layui-required">*</div></div>
     <div class="layui-input-block layui-input-block-c1">
-        <input lay-filter="residualsRate" id="residualsRate" name="residualsRate" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('残值率') }" type="text" class="layui-input"    lay-verify="|required"   autocomplete="off" input-type="number_input" integer="false" decimal="true" allow-negative="true" step="1.0"   scale="0"/>
+        <input lay-filter="residualsRate" id="residualsRate" name="residualsRate" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('残值率') }" type="text" class="layui-input"   autocomplete="off" input-type="number_input" integer="false" decimal="true" allow-negative="true" step="1.0"   scale="0"/>
     </div>
 </div>
 
